--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -14,6 +14,7 @@
     <!-- Scripts -->
       <!-- <script defer src="/assets/scripts.js"></script> -->
       <!-- <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script> -->
+      <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <!-- Favicon -->
       <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
