--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- SEO -->
-    <title><%- page.title %> - Junior Enterprise Worldwide</title>
+    <title>
+      <% if( page.title == 'Home' ){ %>
+        <%- site.title %> - <%- page.title %>
+      <% } else { %>
+        <%- page.title %> - <%- site.title %>
+      <% } %>
+    </title>
     <!-- CSS Styles -->
     <link rel="stylesheet" type="text/css" href="/assets/styles.css">
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
