--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -8,11 +8,12 @@
     <!-- SEO -->
     <title>
       <% if( page.title == 'Home' ){ %>
-        <%- site.title %> - <%- page.title %>
+        <%- config.title %> - <%- page.title %>
       <% } else { %>
-        <%- page.title %> - <%- site.title %>
+        <%- page.title %> - <%- config.title %>
       <% } %>
     </title>
+    <meta name="description" content="Serviços completos em Impressão 3D, Prototipagem e Desenvolvimento de Produtos em Brasília. Conte com a Artificer para fabricar suas ideias.">
     <!-- CSS Styles -->
     <link rel="stylesheet" type="text/css" href="/assets/styles.css">
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
