--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -13,7 +13,7 @@
         <%- page.title %> - <%- config.title %>
       <% } %>
     </title>
-    <meta name="description" content="Serviços completos em Impressão 3D, Prototipagem e Desenvolvimento de Produtos em Brasília. Conte com a Artificer para fabricar suas ideias.">
+    <meta name="description" content="<%- page.description %>">
     <!-- CSS Styles -->
     <link rel="stylesheet" type="text/css" href="/assets/styles.css">
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
