--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -18,7 +18,7 @@
       <% } %>
     <!-- Open Graph -->
       <% if( page.featured-image ){ %>
-        <%- open_graph({ type: 'article', image: page.featured-image }) %>
+        <%- open_graph({ type: 'article', image: page.featured_image }) %>
       <% } else { %>
         <%- open_graph({ type: 'article' }) %>
       <% } %>
