--- a/themes/lyon-theme/layout/index.ejs
+++ b/themes/lyon-theme/layout/index.ejs
@@ -1,12 +1,24 @@
 <!-- Hero Section -->
-<% <%- partial('partial/big-hero', { learn-more-target: 'concept', content:' %>
-  <h1>
-    <span class="pretyped">Students delivering</span>
-    <span class="typewriter" data-period="2000" data-type='["growth.","results.","projects.","change.","future."]'>growth.</span><span class="blinking"></span>
-  </h1>
-  <h2>Worldwide. Since 1967.</h2>
-<% '}) %> %>
-<%- partial('partial/network-numbers') %>
+<section id="big-hero" class="u-white bg-image bg-gradient-2-light">
+  <img src="/assets/images/cnh-2017.jpeg">
+  <video autoplay loop muted>
+    <source src="/assets/videos/hero-video.webm" type="video/webm">
+    <source src="/assets/videos/hero-video.mp4" type="video/mp4">
+  </video>
+  <div class="container">
+    <h1>
+      <span class="pretyped">Students delivering</span>
+      <span class="typewriter" data-period="2000" data-type='["growth.","results.","projects.","change.","future."]'>growth.</span><span class="blinking"></span>
+    </h1>
+    <h2>Worldwide. Since 1967.</h2>
+  </div>
+  <div tabindex="0" class="learn-more u-button" onclick="smoothScroll(<%- learn-more-target %>);">
+    Learn more<br>
+    <svg viewBox="0 0 32 32" width="16" height="16" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+      <path d="M30 12 L16 24 2 12" />
+    </svg>
+  </div>
+</section>
 
 <!-- Main Content -->
 <div class="bg-white"><div class="container">
