--- a/themes/lyon-theme/layout/partial/footer.ejs
+++ b/themes/lyon-theme/layout/partial/footer.ejs
@@ -22,7 +22,7 @@
         <p>© 2018 Junior Enterprise Global Council</p>
       </div>
       <div class="one-half column u-center u-750-right">
-        <p>Questions? jeglobalcouncil@gmail.com | <span tabindex="0" class="u-button" onclick="smoothScroll('navigation');">Scroll to top <i class="fa fa-caret-up"></i></span></p>
+        <p>Questions? <a href="mailto:jeglobalcouncil@gmail.com">jeglobalcouncil@gmail.com</a> | <span tabindex="0" class="u-button" onclick="smoothScroll('navigation');">Scroll to top <i class="fa fa-caret-up"></i></span></p>
       </div>
     </div>
   </div>
