--- a/themes/lyon-theme/layout/partial/footer.ejs
+++ b/themes/lyon-theme/layout/partial/footer.ejs
@@ -27,3 +27,9 @@
     </div>
   </div>
 </section>
+
+<section id="premium-partners" class="bg-dark">
+  <div class="container u-center">
+    <img src="/assets/logos/gp-jr.png" alt="GP Jr Logo">
+  </div>
+</section>
