--- a/themes/lyon-theme/source/assets/styles.css
+++ b/themes/lyon-theme/source/assets/styles.css
@@ -350,6 +350,7 @@ input.card, textarea.card {
 
 .bg-white { background-color: #fff; }
 .bg-gray { background-color: #f2f2f2; }
+.bg-dark { background-color: #e2e2e2; }
 
 .bg-image { position: relative; background: rgba(50,50,50,0.7); padding: 1.5rem 0; border-bottom: 6px solid #e2e2e2; }
 .bg-image > img { position: absolute; height: 100%; top: 0; z-index: -1!important; object-fit: cover; width: 100%; left: 0; }
