--- a/themes/lyon-theme/layout/partial/footer.ejs
+++ b/themes/lyon-theme/layout/partial/footer.ejs
@@ -30,6 +30,6 @@
 
 <section id="premium-partners" class="bg-dark">
   <div class="container u-center">
-    <img src="/assets/logos/gp-jr.png" alt="GP Jr Logo">
+    <a href="http://www.gpjr.com.br/"><img src="/assets/logos/gp-jr.png" alt="GP Jr Logo"></a>
   </div>
 </section>
