--- a/themes/lyon-theme/source/assets/styles.css
+++ b/themes/lyon-theme/source/assets/styles.css
@@ -533,9 +533,10 @@ VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV */
 /* Footer Section
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-#footer, #premium-partners { padding: 0.75rem 0; }
+#footer { padding: 0.75rem 0; }
+#premium-partners { padding: 0.25rem 0; }
 #footer img, #premium-partners img { height: 60px; }
-#premium-partners img { filter: brightness(0); transition: 0.15s ease-in filter; }
+#premium-partners img { filter: brightness(0); transition: 0.15s ease-in filter; display: inline-block; vertical-align: bottom; margin: 0.5rem; }
 #premium-partners a:hover img, #premium-partners a:focus img { filter: brightness(1); }
 #footer a { width: 100%; color: inherit; padding-top: 0.5rem; }
 #footer a:hover, #footer a:focus { color: #24a1c8; text-decoration: none; }
