--- a/themes/lyon-theme/layout/pages/partners.ejs
+++ b/themes/lyon-theme/layout/pages/partners.ejs
@@ -24,7 +24,8 @@
     <div class="deck">
       <% site.posts.forEach(function(partner){ %>
         <% if(partner.type=='partner'){ %>
-          <% if(partner.premium==true){ %>
+          hi
+          <% if(partner.premium=='true'){ %>
             premium
             <%- partial('partial/partner-card') %>
           <% } %>
