--- a/themes/lyon-theme/layout/pages/partners.ejs
+++ b/themes/lyon-theme/layout/pages/partners.ejs
@@ -23,6 +23,7 @@
     <h3>Our partners</h3>
     <div class="deck">
       <% site.posts.forEach(function(partner){ %>
+        ola
         <% if(partner.type=='partner'){ %>
           hi
           <% if(partner.premium=='true'){ %>
