--- a/themes/lyon-theme/layout/pages/partners.ejs
+++ b/themes/lyon-theme/layout/pages/partners.ejs
@@ -23,15 +23,11 @@
     <h3>Our partners</h3>
     <div class="deck">
       <% site.posts.forEach(function(partner){ %>
-        ola
         <% if(partner.type=='partner'){ %>
-          hi
-          <% if(partner.premium=='true'){ %>
-            premium
+          <% if(partner.premium==true){ %>
             <%- partial('partial/partner-card') %>
           <% } %>
           <% if(partner.premium==false){ %>
-            non premium
             <%- partial('partial/partner-card', {partner: partner}) %>
           <% } %>
         <% } %>
