--- a/themes/lyon-theme/layout/partial/footer.ejs
+++ b/themes/lyon-theme/layout/partial/footer.ejs
@@ -30,6 +30,12 @@
 
 <section id="premium-partners" class="bg-dark">
   <div class="container u-center">
-    <a href="http://www.gpjr.com.br/" target="_blank"><img src="/assets/logos/gp-jr.png" alt="GP Jr Logo"></a>
+    <% site.posts.forEach(function(partner){ %>
+      <% if(partner.type=='partner'){ %>
+        <% if(partner.premium==true){ %>
+          <a href="<%- partner.link %>" target="_blank"><img src="<%- partner.logo %>" alt="<%- partner.name %> Logo"></a>
+        <% } %>
+      <% } %>
+    <% }) %>
   </div>
 </section>
