--- a/themes/lyon-theme/layout/pages/partners.ejs
+++ b/themes/lyon-theme/layout/pages/partners.ejs
@@ -54,31 +54,11 @@
   <section>
     <h3>In the media</h3>
     <div class="deck">
-      <a class="vertical card with-cover" href="http://www.jadenet.org/global-journeys-learn-international-enlargement-journey/">
-        <div class="cover" style="background-image: url(/assets/images/global-journeys.jpeg)"></div>
-        <h4>Global Journeys: Learn about the international enlargement journey</h4>
-        <p class="cite">JADE Blog (English)</p>
-      </a>
-      <a class="vertical card with-cover" href="https://www1.folha.uol.com.br/empreendedorsocial/2016/07/1795617-empresas-juniores-querem-expandir-atuacao-para-mais-10-paises-ate-2018.shtml">
-        <div class="cover" style="background-image: url(/assets/images/global-forum-16-stage.jpeg)"></div>
-        <h4>Junior Enterprises want to expand to 10 more countries until 2018</h4>
-        <p class="cite">Folha de S.Paulo (Portuguese)</p>
-      </a>
-      <a class="vertical card with-cover" href="http://www.jadenet.org/opportunities-gc-exchange-program/">
-        <div class="cover" style="background-image: url(/assets/images/exchange-program.jpeg)"></div>
-        <h4>Why should you participate in the Exchange Program of the JE Network?</h4>
-        <p class="cite">JADE Blog (English)</p>
-      </a>
-      <a class="vertical card with-cover" href="https://www.letudiant.fr/jobsstages/junior-entreprise-devenez-entrepreneur-avant-l-heure.html">
-        <div class="cover" style="background-image: url(/assets/images/letudiant-article.jpeg)"></div>
-        <h4>JEs: Becoming an entrepreneur before graduating</h4>
-        <p class="cite">L'Etudiant (French)</p>
-      </a>
-      <a class="vertical card with-cover" href="https://exame.abril.com.br/negocios/dino/empresa-junior-promove-a-experiencia-em-lideranca-para-universitarios/">
-        <div class="cover" style="background-image: url(/assets/images/exame-article.jpeg)"></div>
-        <h4>JEs provide leadership experience for university students</h4>
-        <p class="cite">EXAME (Portuguese)</p>
-      </a>
+      <% site.posts.forEach(function(publication){ %>
+        <% if(publication.type=='media-publication'){ %>
+          <%- partial('partial/media-publication-card', { publication: publication }) %>
+        <% } %>
+      <% }) %>
     </div>
   </section>
 </div></div>
