--- a/themes/lyon-theme/layout/partial/media-publication-card.ejs
+++ b/themes/lyon-theme/layout/partial/media-publication-card.ejs
@@ -1,5 +1,5 @@
 <a class="vertical card with-cover" href="<%- publication.link %>">
   <div class="cover" style="background-image: url(<%- publication.cover %>)"></div>
   <h4><%- publication.title %></h4>
-  <p class="cite"><%- publication.source %> (<%- publication.language %>)</p>
+  <p class="cite"><%- publication.outlet %> (<%- publication.language %>)</p>
 </a>
