--- a/themes/lyon-theme/layout/pages/partners.ejs
+++ b/themes/lyon-theme/layout/pages/partners.ejs
@@ -27,6 +27,10 @@
           <% if(partner.premium==true){ %>
             <%- partial('partial/partner-card', {partner: partner}) %>
           <% } %>
+        <% } %>
+      <% }) %>
+      <% site.posts.forEach(function(partner){ %>
+        <% if(partner.type=='partner'){ %>
           <% if(partner.premium==false){ %>
             <%- partial('partial/partner-card', {partner: partner}) %>
           <% } %>
