--- a/themes/lyon-theme/layout/pages/partners.ejs
+++ b/themes/lyon-theme/layout/pages/partners.ejs
@@ -67,7 +67,7 @@
   </section>
 </div></div>
 
-<!-- Footer Section -->
+<!-- Call-to-Action -->
 <section class="u-white u-center bg-image bg-gradient-2">
   <img src="/assets/images/jobs-2k17-stage-2.jpeg">
   <div class="container">
