--- a/themes/lyon-theme/layout/home.ejs
+++ b/themes/lyon-theme/layout/home.ejs
@@ -66,7 +66,17 @@
 <div class="bg-white"><div class="container">
   <section id="insights">
     <h3>Insights</h3>
-    <p>Sorry, there are no blog posts right now. Come back soon!</p>
+    <div class="deck">
+      <% var i=0 %>
+      <% if(i<3){ %>
+        <% site.posts.sort('date', -1).forEach(function(post){ %>
+          <% if(post.type=='blog'){ %>
+            <%- partial('partial/blog-post-card', { post: post }) %>
+            <% i++ %>
+          <% } %>
+        <% }) %>
+      <% } %>
+    </div>
     <div class="primary link">
       <a href="/insights">View all posts</a>
     </div>
@@ -81,10 +91,4 @@
 </div></div>
 
 <!-- Call-to-Action -->
-<section id="cta" class="u-center u-white bg-image bg-gradient-2">
-  <img src="/assets/images/global-forum-16-signing.jpeg">
-  <div class="container">
-    <p>Want to receive opportunities from the Global Council and partners in your inbox?</p>
-    <a class="button" href="/mailchimp" target="_blank">Sign-up to our newsletter!</a>
-  </div>
-</section>
+<%- partial('partial/newsletter-cta') %>
