--- a/themes/lyon-theme/layout/pages/confederations.ejs
+++ b/themes/lyon-theme/layout/pages/confederations.ejs
@@ -5,12 +5,7 @@
 </section>
 
 <!-- Top CTA -->
-<section class="bg-gray">
-  <div class="u-max-full-width container u-center u-padded-spans">
-    <span>Want to hire a JE for your next project?</span>
-    <span><a href="/map" class="button">Find a JE to hire in the JE Map</a></span>
-  </div>
-</section>
+<%- partial('partial/hire-a-je-top-cta') %>
 
 <!-- Page Content -->
 <div class="bg-white"><div class="container">
@@ -338,10 +333,4 @@
 </div></div>
 
 <!-- Bottom CTA -->
-<section class="u-white u-center bg-image bg-gradient-2">
-  <img src="https://images.unsplash.com/photo-1485120252639-4955174c75d6?q=75&amp;fm=jpg&amp;w=1000&amp;fit=max">
-  <div class="container">
-    <p>Want to create a Junior Enterprise in your University?</p>
-    <a class="button purple-hover" href="/start-a-je">Find out how!</a>
-  </div>
-</section>
+<%- partial('partial/start-a-je-cta') %>
