--- a/themes/lyon-theme/layout/home.ejs
+++ b/themes/lyon-theme/layout/home.ejs
@@ -66,7 +66,7 @@
 <div class="bg-white"><div class="container">
   <section id="insights">
     <h3>Insights</h3>
-    <div class="deck">
+    <p><div class="deck">
       <% var i=0 %>
       <% if(i<3){ %>
         <% site.posts.sort('date', -1).forEach(function(post){ %>
@@ -76,7 +76,7 @@
           <% } %>
         <% }) %>
       <% } %>
-    </div>
+    </div></p>
     <div class="primary link">
       <a href="/insights">View all posts</a>
     </div>
