--- a/themes/lyon-theme/layout/partial/newsletter-cta.ejs
+++ b/themes/lyon-theme/layout/partial/newsletter-cta.ejs
@@ -1,7 +1,7 @@
 <section id="cta" class="u-center u-white bg-image bg-gradient-2">
   <img src="/assets/images/global-forum-16-signing.jpeg">
   <div class="container">
-    <p>Want to receive opportunities from the Global Council and partners in your inbox?</p>
+    <p>Want to receive news & opportunities from the Global Council and partners in your inbox?</p>
     <a class="button" href="/mailchimp" target="_blank">Sign-up to our newsletter!</a>
   </div>
 </section>
