--- a/themes/lyon-theme/layout/partial/blog-post-card.ejs
+++ b/themes/lyon-theme/layout/partial/blog-post-card.ejs
@@ -1,5 +1,5 @@
 <a class="vertical card with-cover" href="<%- post.path.replace('index.html','') %>">
   <div class="cover" style="background-image: url(<%- post.featured_image %>)"></div>
   <h4><%- post.title %></h4>
-  <p class="cite">#<%- post.category %></p>
+  <p class="cite">#<%- post.topic %></p>
 </a>
