--- a/themes/lyon-theme/layout/partial/partner-card.ejs
+++ b/themes/lyon-theme/layout/partial/partner-card.ejs
@@ -1,6 +1,6 @@
 <a href="<%- partner.link %>" class="horizontal card">
   <div class="five columns">
-    <img src="<%- partner.logo %>" alt="<%- partner.name %> Logo">
+    <img src="<%- partner.logo %>" alt="<%- partner.title %> Logo">
   </div>
   <div class="seven columns">
     <%- partner.description %>
