--- a/themes/lyon-theme/layout/partial/footer.ejs
+++ b/themes/lyon-theme/layout/partial/footer.ejs
@@ -33,7 +33,7 @@
     <% site.posts.forEach(function(partner){ %>
       <% if(partner.type=='partner'){ %>
         <% if(partner.premium==true){ %>
-          <a href="<%- partner.link %>" target="_blank"><img src="<%- partner.logo %>" alt="<%- partner.name %> Logo"></a>
+          <a href="<%- partner.link %>" target="_blank"><img src="<%- partner.logo %>" alt="<%- partner.title %> Logo"></a>
         <% } %>
       <% } %>
     <% }) %>
