--- a/themes/lyon-theme/source/assets/styles.css
+++ b/themes/lyon-theme/source/assets/styles.css
@@ -545,6 +545,25 @@ VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV */
   #footer nav a { width: auto; line-height: 60px; padding-left: 1rem; padding-top: 0; }
 }
 
+/* Blog Post Cards
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.tag { background: #24a1c8; color: #fff; border-radius: 6px; padding: 2px 6px; }
+.tag:focus, .tag:hover { background-color: #4abbde; text-decoration: none; }
+
+.Enlargement.tag { background: #6161a8 }
+.Enlargement.tag:focus, .Enlargement.tag:hover { #7676b2 }
+
+.Sales.tag { background: #9b5050 }
+.Sales.tag:focus, .Sales.tag:hover { #ab5f5f }
+
+.People.tag { background: #d2852d }
+.People.tag:focus, .People.tag:hover { #d79447 }
+
+.Projects.tag { background: #4c944f }
+.Projects.tag:focus, .Projects.tag:hover { #58a75b }
+
+
 /*                   	  END OF COMMON PAGE STYLES
 VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV */
 
