--- a/themes/lyon-theme/layout/post.ejs
+++ b/themes/lyon-theme/layout/post.ejs
@@ -2,7 +2,7 @@
 <section id="hero" class="u-white u-center bg-image">
   <img src="<%- page.featured_image %>">
   <h1><%- page.title %></h1>
-  <p class="cite" style="margin-bottom:1.5rem"><%- date(page.date, 'YYYY/M/D') %></p>
+  <p class="cite" style="margin-bottom:1.5rem"><%- date(page.date, 'D - M - YYYY') %></p>
 </section>
 
 <section id="author" class="bg-gray"><div class="container">
@@ -22,7 +22,7 @@
 </div></section>
 
 <!-- Page Content -->
-<div class="bg-white"><div class="container">
+<section id="content" class="bg-white"><div class="container">
   <%- partial('partial/topic-tag', { post: page }) %>
   <%- page.content %>
 </div></div>
