--- a/themes/lyon-theme/layout/post.ejs
+++ b/themes/lyon-theme/layout/post.ejs
@@ -9,7 +9,7 @@
   <% site.posts.forEach(function(author){ %>
     <% if(author.type=='author'){ %>
       <% if(author.title==page.author){ %>
-        <div class="two columns u-pull-right">
+        <div class="two columns">
           <img src="<%- author.image %>" alt="<%- author.title %> Profile Image">
         </div>
         <div class="ten columns">
