--- a/themes/lyon-theme/layout/post.ejs
+++ b/themes/lyon-theme/layout/post.ejs
@@ -25,7 +25,7 @@
 <section id="content" class="bg-white"><div class="container">
   <%- partial('partial/topic-tag', { post: page }) %>
   <%- page.content %>
-</div></div>
+</div></section>
 
 <!-- Call-to-Action -->
 <%- partial('partial/newsletter-cta') %>
