--- a/themes/lyon-theme/source/assets/styles.css
+++ b/themes/lyon-theme/source/assets/styles.css
@@ -642,15 +642,18 @@ VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV */
 /* Blog Posts
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-#author { font-size: 14px; }
-#author img { height: 46px; border-radius: 23px; margin: 0 auto 0.75rem auto; }
+#hero .cite { margin: 1.5rem 0; }
+
+#author { font-size: 14px; text-align: center; }
+#author img { height: 48px; border-radius: 24px; margin: 0 auto 0.75rem auto; }
 @media (min-width: 550px) {
+  #author { text-align: left; }
   #author img { margin: 0 0 0 auto; }
   #author .ten.columns { margin-left: -2%; }
 }
 
-#content .cite { margin-top: 1.5rem; }
-#content *:last-child { margin-bottom: 1.5rem; }
+#content p:first-child { margin-top: 1.5rem; }
+#content p:last-child { margin-bottom: 1.5rem; }
 
 /*                   	  END OF HOME (h-) PAGE STYLES
 VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV */
