Intro International Standards

--- a/themes/lyon-theme/layout/pages/concept.ejs
+++ b/themes/lyon-theme/layout/pages/concept.ejs
@@ -53,7 +53,8 @@
 <div class="bg-white"><div class="container">
   <section>
     <h3>International Standards</h3>
-    <p>To be recognized as a Junior Enterprise by the <a href="/confederations">JE network</a>, a JE must be:</p>
+    <p>To ensure that JEs around the world properly execute the JE Concept and the purpose of a Junior Enterprise as presented above, international standards were created for JEs.</p>
+    <p>According to them, for a JE to be recognized as a Junior Enterprise by the <a href="/confederations">JE network</a>, it must be:</p>
     <div class="deck">
       <div class="horizontal card">
         <div class="three columns u-center u-fs3">
