--- a/themes/lyon-theme/layout/post.ejs
+++ b/themes/lyon-theme/layout/post.ejs
@@ -14,7 +14,7 @@
           <img src="<%- author.image %>" alt="<%- author.title %> Profile Image">
         </div>
         <div class="ten columns">
-          <h5><%- author.title %></h5>
+          <h5>By <%- author.title %></h5>
           <p><%- author.description %></p>
         </div>
       <% } %>
