--- a/themes/lyon-theme/layout/pages/start-a-je.ejs
+++ b/themes/lyon-theme/layout/pages/start-a-je.ejs
@@ -8,7 +8,7 @@
 
 <!-- Hero Section -->
 <section id="big-hero" class="u-white u-center bg-image bg-gradient-purple-1">
-  <img src="/assets/images/jet-spring-seminar-2018.jpeg">
+  <img src="/assets/images/enej-2017-jeurs.jpeg">
   <video autoplay loop muted>
     <source src="/assets/videos/start-a-je-video.webm" type="video/webm">
     <source src="/assets/videos/start-a-je-video.mp4" type="video/mp4">
@@ -62,14 +62,14 @@
       </div>
       <div class="one-third column">
         <div class="purple-shadow">
-          <div tabindex="0" onclick="openModal('968390363343103','476px','476px');" class="purple button u-p12 u-center small-image">
-            <img src="/assets/images/coming-soon.jpeg" alt="">
+          <div tabindex="0" onclick="openModal('1006070099575129','476px','476px');" class="purple button u-p12 u-center small-image">
+            <img src="/assets/images/video-brasil-junior.jpeg" alt="">
           </div>
         </div>
       </div>
       <div class="one-third column">
         <div class="purple-shadow">
-          <div tabindex="0" onclick="openModal('968390363343103','476px','476px');" class="purple button u-p12 u-center small-image">
+          <div tabindex="0" onclick="" class="purple button u-p12 u-center small-image">
             <img src="/assets/images/coming-soon.jpeg" alt="">
           </div>
         </div>
