--- a/themes/lyon-theme/layout/pages/start-a-je.ejs
+++ b/themes/lyon-theme/layout/pages/start-a-je.ejs
@@ -31,12 +31,12 @@
   <div class="deck">
     <div class="one-half column cta container bg-gray">
       <p>Are you a student or university staff member that wants to create a JE? We can help you!</p>
-      <a href="/google-form" class="purple button" target="_blank">Start your JE today</a>
+      <a href="https://goo.gl/forms/OkGFtputtWOZp4Nl1" class="purple button" target="_blank">Start your JE today</a>
     </div>
     <div class="one-half column cta container bg-gray">
       <p>Are you an organization that wants to stimulate the creation of JEs in a certain country or region?</p>
       <div class="purple-shadow">
-        <a href="/google-form" class="purple button" target="_blank">Partner with us</a>
+        <a href="https://goo.gl/forms/7sazuE1uYr2Q2fmY2" class="purple button" target="_blank">Partner with us</a>
       </div>
     </div>
   </div>
@@ -55,7 +55,7 @@
     <div class="deck">
       <div class="one-third column">
         <div class="purple-shadow">
-          <div tabindex="0" onclick="openModal('968390363343103','476px','476px');" class="purple button u-p12 u-center small-image">
+          <div tabindex="0" onclick="openModal('976376269211179','476px','476px');" class="purple button u-p12 u-center small-image">
             <img src="/assets/images/video-je-usa.jpeg" alt="">
           </div>
         </div>
@@ -117,12 +117,12 @@
     <div class="deck">
       <div class="one-half column cta container bg-gray">
         <p>Students and university staff</p>
-        <a href="/google-form" class="purple button" target="_blank">Start your JE today</a>
+        <a href="https://goo.gl/forms/OkGFtputtWOZp4Nl1" class="purple button" target="_blank">Start your JE today</a>
       </div>
       <div class="one-half column cta container bg-gray">
         <p>Companies and organizations</p>
         <div class="purple-shadow">
-          <a href="/google-form" class="purple button" target="_blank">Partner with us</a>
+          <a href="https://goo.gl/forms/7sazuE1uYr2Q2fmY2" class="purple button" target="_blank">Partner with us</a>
         </div>
       </div>
     </div>
